--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Search UI</title>
+    <title>Google Search</title>
     <style>
         body {
             background-color: #202124;
@@ -50,8 +50,10 @@
     <div class="trending-container">
         <div class="trending-title">Trending searches</div>
         <div class="search-item">🔍 Why is my bf so cute?</div>
-        <div class="search-item">🔍 Why does Rheina love him more?</div>
-        <div class="search-item">🔍 Rheina's birthdate (coz her bf forgets)</div>
+        <div class="search-item">🔍 Why does Pj love him more?</div>
+        <div class="search-item">🔍 Justine Pogi?</div>
+        <div class="search-item">🔍 love</div>
+        <div class="search-item">🔍 Pj's birthdate (coz her bf still gets confused)</div>
     </div>
 
     <script>
