--- a/search.html
+++ b/search.html
@@ -52,7 +52,7 @@
         <div class="search-item">🔍 Why is my bf so cute?</div>
         <div class="search-item">🔍 Why does Pj love him more?</div>
         <div class="search-item">🔍 Justine Pogi?</div>
-        <div class="search-item">🔍 love</div>
+        <div class="search-item">🔍 Tip: search "how long have we been together?"</div>
         <div class="search-item">🔍 Pj's birthdate (coz her bf still gets confused)</div>
     </div>
 
