--- a/timer.html
+++ b/timer.html
@@ -6,7 +6,7 @@
     <title>Love Countdown</title>
     <style>
         body {
-            background: #f7c6d3;
+            background: url('bg.jpg') no-repeat center center/cover;
             font-family: Arial, sans-serif;
             text-align: center;
             color: white;
