--- a/hearts.html
+++ b/hearts.html
@@ -17,7 +17,9 @@
         </div>
         <div class="navigation">
     <button class="nav-button" onclick="window.location.href='letter.html'">
-        Next page <i class="fas fa-arrow-right"></i>
+        Next Page <i class="fas fa-arrow-right"></i>
+         <button class="nav-button" onclick="window.location.href='timer.html'">
+        Previous Page <i class="fas fa-arrow-right"></i>
     </button>
 </div>
     </div>
