--- a/hearts.html
+++ b/hearts.html
@@ -18,7 +18,7 @@
         <div class="navigation">
     <button class="nav-button" onclick="window.location.href='letter.html'">
         Next Page <i class="fas fa-arrow-right"></i>
-         <button class="nav-button" onclick="window.location.href='timer.html'">
+         <button class="nav-button" onclick="window.location.href='letter.html'">
         Previous Page <i class="fas fa-arrow-right"></i>
     </button>
 </div>
