--- a/hearts.html
+++ b/hearts.html
@@ -16,10 +16,10 @@
             <button class="circle-button" onclick="window.location.href='music.html';"><i class="fas fa-music"></i></button>
         </div>
         <div class="navigation">
-    <button class="nav-button" onclick="window.location.href='letter.html'">
-        Next Page <i class="fas fa-arrow-right"></i>
+    <button class="nav-button" onclick="window.location.href='timer.html'">
+       Previous Page <i class="fas fa-arrow-left"></i>
          <button class="nav-button" onclick="window.location.href='letter.html'">
-        Previous Page <i class="fas fa-arrow-right"></i>
+        Next Page <i class="fas fa-arrow-right"></i>
     </button>
 </div>
     </div>
