--- a/timer.html
+++ b/timer.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Love Countdown</title>
+    <title>Our Love Time</title>
     <style>
         body {
             background: url('style/bg.jpg') no-repeat center center/cover;
             font-family: Arial, sans-serif;
             text-align: center;
-            color: white;
+            color: black;
             display: flex;
             flex-direction: column;
             align-items: center;
