--- a/search.html
+++ b/search.html
@@ -49,6 +49,7 @@
 
     <div class="trending-container">
         <div class="trending-title">Trending searches</div>
+        <div class="search-item">🔍 I Love you baby</div>
         <div class="search-item">🔍 Why is my bf so cute?</div>
         <div class="search-item">🔍 Why does Pj love him more?</div>
         <div class="search-item">🔍 Justine Pogi?</div>
