--- a/messages.html
+++ b/messages.html
@@ -12,10 +12,10 @@
     <div class="notes-container">
         <h1>Messages</h1>
         <ul class="note-list">
-            <li onclick="openPopup('you\'ve got me thinking', 'Was this our first official date? not sure but surely made me think I am starting to like you na. kind of want to spend more time with you, I\'m not even planning to like someone.', 'imgs/notes/MessageImage1.png')">November 17, 2024</li>
+            <li onclick="openPopup('you\'ve got me thinking', 'Was this our first official date? not sure but it surely made me think I am starting to like you na. kind of want to spend more time with you, I\'m not even planning to like someone.', 'imgs/notes/MessageImage1.png')">November 17, 2024</li>
             <li onclick="openPopup('I was supposed to say yes on the 12th', 'When I took this picture, I was sure na like legit that I want you. I wasn\'t sure how can I tell you, I was thinking pa kung ipagbubukas ko na lang', 'imgs/notes/MessageImage2.png')">December 14, 2024</li>
             <li onclick="openPopup('wow', 'Our First KISS!! ❤️.', 'imgs/notes/MessageImage3.png')">December 29, 2024</li>
-            <li onclick="openPopup('Crush mo ko', 'Found this! I was having second thoughts pa if connected sakin so I tried posting new notes about cafe haha!', 'imgs/notes/MessageImage4.png')">Date Unknown</li>
+            <li onclick="openPopup('Crush mo ko', 'Found this! I was having second thoughts pa if connected sakin so I tried posting new notes about cafe haha! I remember posting something about our subj finance since arias told me accounting student ka daw.', 'imgs/notes/MessageImage4.png')">Date Unknown</li>
             <li onclick="openPopup('DM me po', 'Send me another password so I can send the whole playlist 🤪 clue: you always say this!', 'imgs/notes/MessageImage5.png')">February 02, 2025</li>
         </ul>
     </div>
