--- a/letter.html
+++ b/letter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envelope Animation</title>
+    <title>My Letter</title>
     <link rel="stylesheet" href="style/letter.css">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -22,21 +22,14 @@
     </div>
     </div>
 </div>
-
-<div class="background-gif">
-    <img src="style/fireworks.gif" alt="animated background"
-</div>
-
     <div class="navigation">
         <button class="nav-button" onclick="window.location.href='hearts.html'">
              <i class="fas fa-arrow-left"></i> Previous Page
         </button>
     </div>
-
     <div class="footer">
         <img src="style/christmas.gif" alt="Funny GIF">
     </div>
-
     <script src="scripts/letter.js"></script>
 </body>
 </html>
