--- a/memories.html
+++ b/memories.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polaroid Grid</title>
+    <title>Memories</title>
     <h1>Our Favorites Photos</h1>
     <link rel="stylesheet" href="style/memories.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -20,7 +20,7 @@
             <img src="imgs/memories/Picture2.png" alt="Memory 2">
             <p>December 14, 2024</p>
         </div>
-        <div class="polaroid" onclick="openPopup('imgs/memories/Picture3.png', 'Our First Christmas together ❤️')">
+        <div class="polaroid" onclick="openPopup('imgs/memories/Picture3.png', 'Our First Christmas together ❤️ more to come?')">
             <img src="imgs/memories/Picture3.png" alt="Memory 3">
             <p>December 25, 2024</p>
         </div>
