--- a/hearts.html
+++ b/hearts.html
@@ -17,7 +17,7 @@
         </div>
         <div class="navigation">
             <button class="nav-button" onclick="window.location.href='timer.html'">
-            <i class="fas fa-arrow-left"> Previous Page </i>
+            <i class="fas fa-arrow-left"> Previous Page </i> </button>
             <button class="nav-button" onclick="window.location.href='letter.html'">
             Next Page <i class="fas fa-arrow-right"></i>
     </button>
