--- a/letter.html
+++ b/letter.html
@@ -22,11 +22,9 @@
     </div>
     </div>
 </div>
-    <div class="navigation">
-        <button class="nav-button" onclick="window.location.href='hearts.html'">
+        <button class="button" onclick="window.location.href='hearts.html'">
              <i class="fas fa-arrow-left"></i> Previous Page
              </button>
-    </div>
     <script src="scripts/letter.js"></script>
 </body>
 </html>
