--- a/letter.html
+++ b/letter.html
@@ -14,6 +14,8 @@
     <div class="envelope-container" onclick="toggleLetter()">
         <div class="envelope">
             <div class="flap"></div>
+            <div class="flap"></div>
+            <div class="flap"></div>
             <div class="body"></div>
         </div>
         <div class="letter">
