--- a/hearts.html
+++ b/hearts.html
@@ -15,12 +15,13 @@
             <button class="circle-button" onclick="window.location.href='memories.html';"><i class="fas fa-image"></i></button>
             <button class="circle-button" onclick="window.location.href='music.html';"><i class="fas fa-music"></i></button>
         </div>
-        <div class="navigation">
-            <button class="nav-button" onclick="window.location.href='timer.html'">
-            <i class="fas fa-arrow-left"> Previous Page </i> </button>
-            <button class="nav-button" onclick="window.location.href='letter.html'"> Next Page <i class="fas fa-arrow-right"></i>
-    </button>
-</div>
+        
+         <button class="button" onclick="window.location.href='hearts.html'">
+             <i class="fas fa-arrow-left"></i> Previous Page
+             </button>
+          <button class="button" onclick="window.location.href='hearts.html'">
+            Next Page <i class="fas fa-arrow-right"></i>
+             </button>
     </div>
     </div>
 </body>
