--- a/hearts.html
+++ b/hearts.html
@@ -16,12 +16,12 @@
             <button class="circle-button" onclick="window.location.href='music.html';"><i class="fas fa-music"></i></button>
         </div>
         
-         <button class="buutton" onclick="window.location.href='hearts.html'">
+         <buutton class="buutton" onclick="window.location.href='hearts.html'">
              <i class="fas fa-arrow-left"></i> Previous Page
-         </button>
-          <button class="buutton" onclick="window.location.href='letter.html'">
+         </buutton>
+          <buutton class="buutton" onclick="window.location.href='letter.html'">
             Next Page <i class="fas fa-arrow-right"></i>
-             </button>
+             </buutton>
     </div>
     </div>
 </body>
