--- a/hearts.html
+++ b/hearts.html
@@ -15,13 +15,15 @@
             <button class="circle-button" onclick="window.location.href='memories.html';"><i class="fas fa-image"></i></button>
             <button class="circle-button" onclick="window.location.href='music.html';"><i class="fas fa-music"></i></button>
         </div>
-        
+
+        <div>
          <buutton class="buutton" onclick="window.location.href='hearts.html'">
              <i class="fas fa-arrow-left"></i> Previous Page
          </buutton>
           <buutton class="buutton" onclick="window.location.href='letter.html'">
             Next Page <i class="fas fa-arrow-right"></i>
              </buutton>
+        </div>
     </div>
     </div>
 </body>
