--- a/hearts.html
+++ b/hearts.html
@@ -17,12 +17,12 @@
         </div>
 
         <div>
-         <buutton class="buutton" onclick="window.location.href='hearts.html'">
+         <button class="buutton" onclick="window.location.href='hearts.html'">
              <i class="fas fa-arrow-left"></i> Previous Page
-         </buutton>
-          <buutton class="buutton" onclick="window.location.href='letter.html'">
+          <button class="buutton" onclick="window.location.href='letter.html'">
             Next Page <i class="fas fa-arrow-right"></i>
-             </buutton>
+          </button>
+             </button>
         </div>
     </div>
     </div>
