--- a/search.html
+++ b/search.html
@@ -37,6 +37,9 @@
             font-size: 16px;
             padding: 5px 0;
         }
+        h1 {
+            margin-top: 50px;
+        }
     </style>
 </head>
 <body>
