--- a/hearts.html
+++ b/hearts.html
@@ -17,7 +17,7 @@
         </div>
 
         <div>
-         <button class="navigation" onclick="window.location.href='hearts.html';"><i class="fas fa-arrow-left"></i> Previous Page </button>
+         <button class="navigation" onclick="window.location.href='timer.html';"><i class="fas fa-arrow-left"></i> Previous Page </button>
          <button class="navigation" onclick="window.location.href='letter.html';"> Next Page <i class="fas fa-arrow-right"></i> </button>
         </div>
     </div>
