--- a/memories.html
+++ b/memories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memories</title>
-    <h1>Our Favorites Photos</h1>
+    <h1>Our Favorite Photos</h1>
     <link rel="stylesheet" href="style/memories.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
