--- a/letter.html
+++ b/letter.html
@@ -9,7 +9,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: url('style/bg.jpg');
+            background: url('imgs/bg.jpg');
         }
         .container {
             position: relative;
