--- a/letter.html
+++ b/letter.html
@@ -9,7 +9,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: url('imgs/bg.jpg');
+            background: url('style/bg.jpg');
         }
         .container {
             position: relative;
@@ -50,7 +50,7 @@
 <body>
 
     <div class="container" onclick="showLetter()">
-        <img src="img/heart.png" class="heart" alt="Heart with Wings">
+        <img src="imgs/heart.png" class="heart" alt="Heart with Wings">
         <div class="letter" id="letter">I've got a lot to say but I'll shorten it by saying, if God lets me wear a wedding ring in the future, <br> I hope it finds its pair in your ring finger. <br> Thank you for everything, for sharing your love with me and for choosing me, my Justine! 💖 <br> Wishing us many more wonderful years together</div>
     </div>
 
