--- a/letter.html
+++ b/letter.html
@@ -10,13 +10,17 @@
             justify-content: center;
             align-items: center;
             background: url('style/bg.jpg');
+            margin: 0;
         }
         .container {
             position: relative;
             cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .heart {
-            width: 150px;
+            width: 250px;
             transition: transform 0.3s ease;
         }
         .heart:active {
@@ -27,15 +31,15 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 120px;
-            height: 80px;
+            width: 200px;
+            height: 120px;
             background-color: #fff;
             border: 2px solid #d33;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
             text-align: center;
-            padding: 10px;
+            padding: 15px;
             font-family: 'Courier New', monospace;
-            font-size: 14px;
+            font-size: 16px;
             line-height: 1.5;
             opacity: 0;
             transition: opacity 0.5s, transform 0.5s;
@@ -43,7 +47,7 @@
         }
         .letter.show {
             opacity: 1;
-            transform: translate(-50%, -110%);
+            transform: translate(-50%, -130%);
         }
     </style>
 </head>
