--- a/letter.html
+++ b/letter.html
@@ -20,6 +20,7 @@
             align-items: center;
         }
         .heart {
+            margin-top: 200px;
             width: 250px;
             transition: transform 0.3s ease;
         }
@@ -31,8 +32,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 200px;
-            height: 120px;
+            width: 400px;
+            height: 200px;
             background-color: #fff;
             border: 2px solid #d33;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
