--- a/letter.html
+++ b/letter.html
@@ -28,12 +28,13 @@
             transform: scale(0.95);
         }
         .letter {
+            margin-top: 200px;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 400px;
-            height: 200px;
+            width: 250px;
+            height: 250px;
             background-color: #fff;
             border: 2px solid #d33;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
