--- a/letter.html
+++ b/letter.html
@@ -51,6 +51,16 @@
             opacity: 1;
             transform: translate(-50%, -130%);
         }
+        .navigation {
+            padding: 10px 20px;
+            background: white;
+            color: #f78da7;
+            border: none;
+            position: bottom;
+            border-radius: 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
