--- a/letter.html
+++ b/letter.html
@@ -70,6 +70,10 @@
         <div class="letter" id="letter">I've got a lot to say but I'll shorten it by saying, if God lets me wear a wedding ring in the future, <br> I hope it finds its pair in your ring finger. <br> Thank you for everything, for sharing your love with me and for choosing me, my Justine! 💖 <br> Wishing us many more wonderful years together</div>
     </div>
 
+     <div>
+         <button class="navigation" onclick="window.location.href='hearts.html';"><i class="fas fa-arrow-left"></i> Previous Page </button>
+        </div>
+
     <script>
         function showLetter() {
             document.getElementById("letter").classList.toggle("show");
