--- a/letter.html
+++ b/letter.html
@@ -21,6 +21,7 @@
         }
         .heart {
             margin-top: 200px;
+            margin-bottom: 200px;
             width: 250px;
             transition: transform 0.3s ease;
         }
