--- a/letter.html
+++ b/letter.html
@@ -57,7 +57,7 @@
             background: white;
             color: #f78da7;
             border: none;
-            position: bottom;
+            position: absolue;
             border-radius: 20px;
             font-size: 16px;
             cursor: pointer;
