--- a/letter.html
+++ b/letter.html
@@ -58,7 +58,7 @@
             background: white;
             color: #f78da7;
             border: none;
-            position: absolue;
+            position: absolute;
             border-radius: 20px;
             font-size: 16px;
             cursor: pointer;
