--- a/letter.html
+++ b/letter.html
@@ -22,7 +22,6 @@
         }
         .heart {
             margin-top: 200px;
-            margin-bottom: 400px;
             width: 250px;
             transition: transform 0.3s ease;
         }
@@ -62,6 +61,7 @@
             border-radius: 20px;
             font-size: 16px;
             cursor: pointer;
+            bottom: 0;
         }
     </style>
 </head>
