--- a/letter.html
+++ b/letter.html
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             background: url('style/bg.jpg');
-            margin: 0;
+            height: 62hv;
         }
         .container {
             position: relative;
@@ -62,6 +62,7 @@
             font-size: 16px;
             cursor: pointer;
             bottom: 0;
+            margin: 0;
         }
     </style>
 </head>
