--- a/letter.html
+++ b/letter.html
@@ -11,7 +11,7 @@
             justify-content: center;
             align-items: center;
             background: url('style/bg.jpg');
-            height: 62hv;
+            height: 62vh;
         }
         .container {
             position: relative;
