--- a/letter.html
+++ b/letter.html
@@ -11,7 +11,6 @@
             justify-content: center;
             align-items: center;
             background: url('style/bg.jpg');
-            height: 62vh;
         }
         .container {
             position: relative;
@@ -62,7 +61,7 @@
             font-size: 16px;
             cursor: pointer;
             bottom: 0;
-            margin: 0;
+            margin-right: 50px;
         }
     </style>
 </head>
