--- a/letter.html
+++ b/letter.html
@@ -61,7 +61,7 @@
             font-size: 16px;
             cursor: pointer;
             bottom: 0;
-            margin-right: 100px;
+            width: 50%;
         }
     </style>
 </head>
