--- a/messages.html
+++ b/messages.html
@@ -21,16 +21,19 @@
         </ul>
     </div>
 
+        
     <!-- Popup -->
     <div id="popup" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup()">&times;</span>
+            <div class="scroll-box">   
             <div class="polaroid">
                 <img id="popup-image" src="" alt="Note Image">
                 <h2 id="popup-title">Note Title</h2>
                 <p id="popup-description">Note Description</p>
             </div>
         </div>
+    </div>
     </div>
 
     <div class="navigation">
