--- a/memories.html
+++ b/memories.html
@@ -25,16 +25,32 @@
             <p>December 25, 2024</p>
         </div>
         <div class="polaroid" onclick="openPopup('imgs/memories/Picture4.png', 'My friends ask me pa, why nauna yung photobooth eh hindi naman tayo hahahah well I like having uncerntainty than being definite with others. I got too busy falling na sayo to think of talking to others pa')">
-            <img src="imgs/memories/Picture4.png" alt="Memory 1">
+            <img src="imgs/memories/Picture4.png" alt="Memory 4">
             <p>November 17, 2024</p>
         </div>
         <div class="polaroid" onclick="openPopup('imgs/memories/Picture5.png', 'Finally got to treat you din, pag ako yumaman I\'ll buy you anything.')">
-            <img src="imgs/memories/Picture5.png" alt="Memory 2">
+            <img src="imgs/memories/Picture5.png" alt="Memory 5">
             <p>January 29, 2025</p>
         </div>
         <div class="polaroid" onclick="openPopup('imgs/memories/Picture6.png', 'well we look great together, deadma sa basher. 🤷🏻‍♀️.')">
-            <img src="imgs/memories/Picture6.png" alt="Memory 3">
+            <img src="imgs/memories/Picture6.png" alt="Memory 6">
             <p>February 12, 2025</p>
+        </div>
+        <div class="polaroid" onclick="openPopup('imgs/memories/Picture7.png', 'Our First and my first overnight yeyy')">
+            <img src="imgs/memories/Picture7.png" alt="Memory 7">
+            <p>March 2, 2025</p>
+        </div>
+        <div class="polaroid" onclick="openPopup('imgs/memories/Picture8.png', 'my favorite picture of us at the moment')">
+            <img src="imgs/memories/Picture8.png" alt="Memory 8">
+            <p>March 14, 2025</p>
+        </div>
+        <div class="polaroid" onclick="openPopup('imgs/memories/Picture9.jpeg', 'because you said you like this picture <3.')">
+            <img src="imgs/memories/Picture9.jpeg" alt="Memory 9">
+            <p>March 14, 2025</p>
+        </div>
+        <div class="polaroid" onclick="openPopup('imgs/memories/Picture10.png', 'u look gwapoo here.')">
+            <img src="imgs/memories/Picture10.png" alt="Memory 10">
+            <p>March 23, 2025</p>
         </div>
         <!-- Add more polaroid frames as needed -->
     </div>
