--- a/music.html
+++ b/music.html
@@ -9,112 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>14 Songs that remind me of you</h1>
+        <h1>A playlist of music that reminds me of you</h1>
         <div class="song-list">
             <div class="song">
-                <img src="imgs/music/1.png" alt="Daydreamin'">
+                <img src="imgs/music/16.png" alt="with Love, PJ">
                 <div class="info">
-                    <p class="title">Daydreamin'</p>
-                    <p class="artist">Ariana Grande</p>
-                </div>
-            </div>
-            <div class="song">
-                <img src="imgs/music/2.png" alt="Bibingka">
-                <div class="info">
-                    <p class="title">Bibingka</p>
-                    <p class="artist">Ben&Ben</p>
-                </div>
-            </div>
-            <div class="song">
-                <img src="imgs/music/3.png" alt="Captivated">
-                <div class="info">
-                    <p class="title">Captivated</p>
-                    <p class="artist">IV of Spade</p>
+                    <p class="title">J</p>
+                    <p class="artist">with Love, PJ</p>
                 </div>
             </div>
 
-            <div class="song">
-                <img src="imgs/music/4.png" alt="Ikaw AT Ako">
-                <div class="info">
-                    <p class="title">Ikaw AT Ako</p>
-                    <p class="artist">TJ Monterde</p>
-                </div>
-            </div>
-
-            <div class="song">
-                <img src="imgs/music/5.png" alt="Janice">
-                <div class="info">
-                    <p class="title">Janice</p>
-                    <p class="artist">Dilaw</p>
-                </div>
-            </div>
-
-            <div class="song">
-                <img src="imgs/music/6.png" alt="Moving CLoser">
-                <div class="info">
-                    <p class="title">Moving CLoser</p>
-                    <p class="artist">Never The Stranger</p>
-                </div>
-            </div>
-
-            <div class="song">
-                <img src="imgs/music/7.png" alt="One Time">
-                <div class="info">
-                    <p class="title">One Time</p>
-                    <p class="artist">Justine Bieber</p>
-                </div>
-            </div>
-
-            <div class="song">
-                <img src="imgs/music/8.png" alt="Bukod-Tangi">
-                <div class="info">
-                    <p class="title">Bukod-Tangi</p>
-                    <p class="artist">Cup of Joe</p>
-                </div>
-            </div>
-
-            <div class="song">
-                <img src="imgs/music/9.png" alt="I Wanna Be Yours">
-                <div class="info">
-                    <p class="title">I Wanna Be Yours</p>
-                    <p class="artist">Artic Monkeys</p>
-                </div>
-            </div>
-            <div class="song">
-                <img src="imgs/music/10.png" alt="An Art Galleru Could Never Be As Unique As You">
-                <div class="info">
-                    <p class="title">An Art Galleru Could Never Be As Unique As You</p>
-                    <p class="artist">mrld</p>
-                </div>
-            </div>
-            <div class="song">
-                <img src="imgs/music/11.png" alt="Intentions">
-                <div class="info">
-                    <p class="title">Intentions"</p>
-                    <p class="artist">Justine BIeber Feat. Quavo</p>
-                </div>
-            </div>
-            <div class="song">
-                <img src="imgs/music/12.png" alt="One of The Girls">
-                <div class="info">
-                    <p class="title">One of The Girls</p>
-                    <p class="artist">The Weeknd,Jenny,Lily-Rose Depp</p>
-                </div>
-            </div>
-            <div class="song">
-                <img src="imgs/music/13.png" alt="King Of My Heart">
-                <div class="info">
-                    <p class="title">King Of My Heart</p>
-                    <p class="artist">Taylor Swift</p>
-                </div>
-            </div>
-            <div class="song">
-                <img src="imgs/music/14.png" alt="Palagi">
-                <div class="info">
-                    <p class="title">Palagi</p>
-                    <p class="artist">TJ Monterde, KZ Tandingan</p>
-                </div>
-            </div>
         </div>
     </div>
 
