--- a/music.html
+++ b/music.html
@@ -8,19 +8,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <h1>A playlist of music that reminds me of you</h1>
-        <div class="song-list">
-            <div class="song">
-                <img src="imgs/music/16.png" alt="with Love, PJ">
-                <div class="info">
-                    <p class="title">J</p>
-                    <p class="artist">with Love, PJ</p>
-                </div>
-            </div>
-
+    <div class="date">Saturday, 14. December</div>
+    <div class="time">15:12</div>
+    <div class="album-art">
+    <img src="imgs/music/16.png" alt="Album Art" style="width: 100%; height: 100%; border-radius: 10px;">
+    </div>
+    <div class="music-player">
+        <div class="track-info">
+            <div><strong>A Playlist that reminds me of you</strong></div>
+            <div>with Love, PJ</div>
+        </div>
+        <div class="progress-bar">
+            <div class="progress"></div>
+        </div>
+        <div class="controls">
+            <button>&#9665;&#9665;</button>
+            <button>&#9654;&#10073;</button>
+            <button>&#9655;&#9655;</button>
         </div>
     </div>
+
 
     <div class="navigation">
         <button class="nav-button" onclick="window.location.href='hearts.html'">
