--- a/music.html
+++ b/music.html
@@ -6,6 +6,7 @@
     <title>Music Page</title>
     <link rel="stylesheet" href="style/music.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" type="image/png" href="style/Hart.jpg">
 </head>
 <body>
     <div class="date">Saturday, 14. December</div>
