--- a/search.html
+++ b/search.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Search</title>
+    <link rel="icon" type="image/png" href="style/Hart.jpg">
     <style>
         body {
             background-color: #202124;
