--- a/messages.html
+++ b/messages.html
@@ -6,6 +6,7 @@
     <title>Messages</title>
     <link rel="stylesheet" href="style/messages.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" type="image/png" href="style/Hart.jpg">
 </head>
 <body>
 
