--- a/memories.html
+++ b/memories.html
@@ -7,6 +7,7 @@
     <h1>Our Favorite Photos</h1>
     <link rel="stylesheet" href="style/memories.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" type="image/png" href="style/Hart.jpg">
 </head>
 <body>
 
