--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enter Passcode</title>
     <link rel="stylesheet" href="style/index.css">
+    <link rel="icon" type="image/png" href="style/Hart.jpg">
 </head>
 <body>
     <div class="container">
