--- a/hearts.html
+++ b/hearts.html
@@ -6,6 +6,7 @@
     <title>Recap Our Time</title>
     <link rel="stylesheet" href="style/nextpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="icon" type="image/png" href="style/Hart.jpg">
 </head>
 <body>
     <div class="container">
