--- a/timer.html
+++ b/timer.html
@@ -7,7 +7,7 @@
       <link rel="icon" type="image/png" href="style/Hart.jpg">
     <style>
         body {
-            background: url('style/bg.jpg') no-repeat center center/cover;
+            background: url('style/bgg.jpg') no-repeat center center/cover;
             font-family: Arial, sans-serif;
             text-align: center;
             color: black;
