--- a/timer.html
+++ b/timer.html
@@ -15,6 +15,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            height: 93vh;
             margin: 0;
         }
         .container {
